--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -2,14 +2,16 @@
   &[data-theme="light"] {
     --primary: #1F509A;
     --bg-color: #fff;
-    --shadow-color: #00000020
+    --shadow-color: #00000020;
+    --text-color: #000
   }
 
 
   &[data-theme="dark"] {
     --primary: #8DC5E7;
     --bg-color: #111;
-    --shadow-color: rgb(46, 45, 45)
+    --shadow-color: rgb(46, 45, 45);
+    --text-color: #fff
   }
 
 }
