--- a/src/index.scss
+++ b/src/index.scss
@@ -16,7 +16,11 @@ body {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1100px;
   width: 90vw;
   margin: 0 auto;
+
+  @media screen and (max-width:600px) {
+    width: 95vw;
+  }
 }
