--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -7,6 +7,7 @@
     --text-secondary-color: #414a59;
     --button-text-color: #fff;
     --hover-color: #f1f5f9;
+    --badge-bg-color: #cbd5e1;
   }
 
 
@@ -18,7 +19,7 @@
     --text-secondary-color: #ccc;
     --button-text-color: #000;
     --hover-color: #334155;
-
+    --badge-bg-color: #111827;
   }
 
 }
