change some styles

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -7,7 +7,7 @@
     --text-secondary-color: #414a59;
     --button-text-color: #fff;
     --hover-color: #f1f5f9;
-    --badge-bg-color: #cbd5e1;
+    --badge-bg-color: #f1f5f9;
   }
 
 
