--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,8 @@ body {
   // Enable font feature setting 'ss02' for other browsers
   font-feature-settings: "ss02";
 
+  scroll-behavior: smooth;
+
 }
 
 .container {
